test/asm/label-redefinition.out
ERROR: label-redefinition.asm(7):
    'Sym' already defined in m(6)
error: Assembly aborted in pass 1 (1 errors)!
